fix: change centre content on mobile res

--- a/src/components/partners/partners.module.css
+++ b/src/components/partners/partners.module.css
@@ -15,6 +15,7 @@
 
   @media screen and (max-width: $tablet-portrait) {
     padding: 56px 0 100px 24px;
+    justify-items: center;
     row-gap: 72px;
   }
 }
